[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet for tokenization logic.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'currencies'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]

codec = { workspace = true }
scale-info = { workspace = true }
pallet-balances = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
# Orml packages
orml-traits = { workspace = true }

primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
core-primitives = { path = "../../traits/core-primitives", default-features = false }

#Benchmarking
frame-benchmarking = { workspace = true, optional = true }

[features]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'orml-traits/std',
    'primitives/std',
    "scale-info/std",
]
