[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'pallet-economy'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-balances = { workspace = true }
pallet-randomness-collective-flip = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-proxy = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-session = { workspace = true }
sp-version = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

# local packages
core-primitives = { path = "../../traits/core-primitives", default-features = false }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }

# Orml packages
orml-traits = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-nft = { workspace = true }
currencies = { package = "currencies", path = "../currencies", default-features = false }
pallet-estate = { package = "pallet-estate", path = "../estate", default-features = false }
pallet-nft = { package = "pallet-nft", path = "../nft", default-features = false }
pallet-mining = { package = "pallet-mining", path = "../mining", default-features = false }
auction-manager = { default-features = false, package = 'auction-manager', path = '../../traits/auction-manager' }

[features]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ['std']
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    "pallet-nft/std",
    "primitives/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "currencies/std",
    "auction-manager/std",
    "pallet-mining/std",
    "pallet-proxy/std"
]
