[package]
name = "pallet-evm-mapping"
version = "2.0.0-rc6"
authors = ["Bit.Country Developer"]
edition = '2021'

[dependencies]
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
libsecp256k1 = { workspace = true, optional = true }
scale-info = { workspace = true }

sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

orml-traits = { workspace = true }

primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "libsecp256k1",
    "libsecp256k1/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "primitives/std",
    "orml-traits/std",
    "orml-tokens/std",
    "orml-currencies/std"
]
runtime-benchmarks = [
    "libsecp256k1",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
