[package]
authors = ['Bit Country <https://github.com/bit-country>']
description = 'Bit Country pallet for governance logic.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'pallet-governance'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true }
codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-version = { workspace = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-scheduler = { workspace = true }

# local packages
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
metaverse-primitive = { package = "core-primitives", path = "../../traits/core-primitives", default-features = false }
pallet-metaverse = { package = "pallet-metaverse", path = "../../pallets/metaverse", default-features = false }
currencies = { package = "currencies", path = "../currencies", default-features = false }

# Orml packages
orml-traits = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
    "sp-std/std",
    "sp-io/std",
    'pallet-balances/std',
    'pallet-scheduler/std',
    'primitives/std',
    'metaverse-primitive/std',
    'pallet-metaverse/std',
    'scale-info/std',
    "orml-tokens/std",
    "currencies/std"
]