[package]
authors = ["Metaverse Network <https://github.com/bit-country>"]
description = "Metaverse Network pallet for tokenization logic."
edition = "2021"
homepage = "https://metaverse.network"
license = "Unlicense"
name = "pallet-mining"
repository = "https://github.com/bit-country"
version = "2.0.0-rc6"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true, optional = true }
codec = { workspace = true, package = "parity-scale-codec" }
scale-info = { workspace = true }
pallet-balances = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }


# Orml packages
orml-traits = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }

primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
core-primitives = { path = "../../traits/core-primitives", default-features = false }
auction-manager = { path = "../../traits/auction-manager", default-features = false }
currencies = { package = "currencies", path = "../currencies", default-features = false }

[dependencies.country]
default-features = false
package = "pallet-metaverse"
path = "../metaverse"
version = "2.0.0-rc6"

[features]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "primitives/std",
    "core-primitives/std",
    "auction-manager/std",
    "country/std",
    "currencies/std",
    "scale-info/std",
    "pallet-balances/std",
]
